--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:60%"></div>
     </div>
-    <p class="w3-wide">WATCHING ANIMATIONS AND CARTOONS</p>
+    <p class="w3-wide">READING </p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:100%"></div>
     </div><br>
@@ -152,7 +152,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <a href="https://www.facebook.com/mickey.mike.50552"><i class="fa fa-facebook-official w3-hover-opacity w3-xxlarge"></i></a>
-    <a href="https://www.instagram.com/im_brayo/"><i class="fa fa-instagram w3-hover-opacity w3-xxlarge"></i></a>
+    <a href="https://www.instagram.com/im.brayo/"><i class="fa fa-instagram w3-hover-opacity w3-xxlarge"></i></a>
     <a href="https://www.pinterest.com/wangatabrian094/"><i class="fa fa-pinterest-p w3-hover-opacity w3-xxlarge"></i></a>
     <a href="https://twitter.com/michael_8274"><i class="fa fa-twitter w3-hover-opacity w3-xxlarge"></i></a>
     <a href="https://www.linkedin.com/in/brian-michael-1b9827194/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
