--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div><br>
     <p>SEND ME A MESSAGE SOME TIME MY DM AINT AS FLOODED.BUT YEAH GET IN TOUCH.</p>
 
-    <form action="https://mail.google.com/mail/u/0/#inbox" target="_blank">
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Please leave a name ndio nijue ni nani" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email address will be pretty useful too " required name="Email"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Okay here's your chance, write this dude something" required name="Message"></p>
+    <form action="mailto:wangatabrian094@gmail.com" target="_blank">
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email address " required name="Email"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Write me something" required name="Message"></p>
       <p>
         <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-          <a href="mailto:wangatabrian094@gmail.com?cc=&bcc=&subject=Big%20News&body=Body-goes-here"><i class="fa fa-paper-plane"></i> THANKS, GOT THAT!</a>
+          <i class="fa fa-paper-plane"></i>SEND</a>
         </button>
       </p>
     </form>
